# adms

./: CMakeLists.txt  INSTALL  README  README.md
admsJSON/: CMakeLists.txt  adms.cc  adms.h  admsJSON.cc  adms_admsmain.cc  adms_admsmain.h  adms_analogfunction.cc  adms_module.cc  json_serializer.cc  preprocessorLex.l  preprocessorMain.cc  verilogaLex.l  verilogaYacc.y
admsXml/: CMakeLists.txt  verilogaYacc.y.in
ngspice/: CMakeLists.txt
ngspice/ekv/: CMakeLists.txt  ekv.va.result.json
ngspice/hicum0/: CMakeLists.txt  hicum0.va.result.json
ngspice/hicum2/: CMakeLists.txt  hicum2.va.result.json
ngspice/mextram/: CMakeLists.txt  bjt504t.va.result.json
ngspice/psp102/: CMakeLists.txt
xmlversion/: CMakeLists.txt
xmlversion/admsXml/: CMakeLists.txt
