PROJECT(ADMS)
find_package(BISON)
MESSAGE("BISON_VERSION ${BISON_VERSION}")
IF (${BISON_VERSION} VERSION_LESS "2.6")
SET (BISON_APIPREFIX "-p")
ELSE (${BISON_VERSION} VERSION_LESS "2.6")
SET (BISON_APIPREFIX "-Dapi.prefix=")
ENDIF (${BISON_VERSION} VERSION_LESS "2.6")
find_package(FLEX)

SET(ADMST_DIR ${CMAKE_SOURCE_DIR}/ngspice/admst)
SET(ADMST_SH  ${ADMST_DIR}/run_adms.sh)

ENABLE_TESTING()
ADD_SUBDIRECTORY(ngspice)
ADD_SUBDIRECTORY(admsXml)

